--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "4",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
     "js-cookie": "^3.0.0",
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.1",
+    "reactstrap": "^8.9.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1",
